<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemUiActivity"
    android:id="@+id/list_item">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="185dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reciept_image"
                android:layout_width="match_parent"
                android:layout_height="391dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_text_view" />

            <EditText
                android:id="@+id/title_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/title_text_edit" />

            <TextView
                android:id="@+id/shop_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shop_name_text_view" />

            <EditText
                android:id="@+id/shop_name_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/shop_name_text_edit" />

            <TextView
                android:id="@+id/comment_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comment_text_view" />

            <EditText
                android:id="@+id/comment_text_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/comment_text_edit" />

            <Button
                android:id="@+id/date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_button" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/location_text_view"
                    android:layout_width="230dp"
                    android:layout_height="58dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/location_text_view"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/map_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/map_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/shop_name_text_view"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/generate_report_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate_report_button" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>